Bug 446758 - Crash krita 5 beta 5 in macOS Big Sur 11.5 after add gradient map filter layer, changing colors and click OK in macOS color selector "Colors"
Summary: Crash krita 5 beta 5 in macOS Big Sur 11.5 after add gradient map filter laye...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: macOS (DMG) macOS
: NOR crash
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-09 22:59 UTC by Artsiom Shemiatavets
Modified: 2021-12-10 02:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
macOS report information (129.98 KB, text/plain)
2021-12-09 22:59 UTC, Artsiom Shemiatavets
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Artsiom Shemiatavets 2021-12-09 22:59:21 UTC
Created attachment 144411 [details]
macOS report information

Hi! Krita 5 beta 5 in macOS Big Sur 11.5 crashed after add gradient map filter layer and changing colors. Thanks for attention!

STEPS TO REPRODUCE
1.  Add filter layer
2.  Choose gradient map filter
3.  Change colors with macOS color selector "Colors"
4.  Click OK in filter layer properties
5.  Click OK in macOS color selector "Colors"

OBSERVED RESULT

Crash of application

EXPECTED RESULT

No crash

SOFTWARE/OS VERSIONS
krita: 5 beta 5
macOS: Big Sur 11.5
Comment 1 vanyossi 2021-12-10 01:51:21 UTC
I can confirm this is crashing if color selector is closed after closing gradient filter editor.
Comment 2 vanyossi 2021-12-10 02:52:13 UTC
Git commit ae98fed60da7ec70bcb9d1ba4645835b2246bf19 by Ivan Yossi.
Committed on 10/12/2021 at 02:51.
Pushed by ivany into branch 'master'.

Fix crash when color selector is closed after the parent Widget (macOS)

The fix is not needed on Linux since the color selector is modal. Since
there is utility in having the color dialog around this patch closes the
color dialog in case the parent dialog gets destroyed.

Broken since refactor
18f73194ea48347cb510d19b53abc85cba19cd57

M  +26   -17   libs/widgets/kis_color_button.cpp

https://invent.kde.org/graphics/krita/commit/ae98fed60da7ec70bcb9d1ba4645835b2246bf19
Comment 3 vanyossi 2021-12-10 02:53:08 UTC
Git commit b9f23ff6c7e7a8d0bae05aaf13ad14197e835144 by Ivan Yossi.
Committed on 10/12/2021 at 02:52.
Pushed by ivany into branch 'krita/5.0'.

Fix crash when color selector is closed after the parent Widget (macOS)

The fix is not needed on Linux since the color selector is modal. Since
there is utility in having the color dialog around this patch closes the
color dialog in case the parent dialog gets destroyed.

Broken since refactor
18f73194ea48347cb510d19b53abc85cba19cd57

(cherry picked from commit ae98fed60da7ec70bcb9d1ba4645835b2246bf19)

M  +26   -17   libs/widgets/kis_color_button.cpp

https://invent.kde.org/graphics/krita/commit/b9f23ff6c7e7a8d0bae05aaf13ad14197e835144