Fix crash when color selector is closed after the parent Widget (macOS)

The fix is not needed on Linux since the color selector is modal. Since
there is utility in having the color dialog around this patch closes the
color dialog in case the parent dialog gets destroyed.

BUG:446758

Broken since refactor
18f73194ea48347cb510d19b53abc85cba19cd57